Enviando Arquivos do Portifolio para o GitHub

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <button class="buttons-aside">NodeJS</button>
                     <button class="buttons-aside">GIT</button>
                     <button class="buttons-aside">GitHub</button>
+                    <button class="buttons-aside">React</button>
                     <button class="buttons-aside">Photoshop</button>
                 </div>  
             </div>
