--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="aside.css">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -82,7 +83,30 @@
             <div class="divmain myprojects">
                 <p>Meus Projetos</p>
             </div>
+           <div class="projetos-container">
+            <div class="projeto">
+                <div class="header-box">
+                    <img src="./assets/folder.svg" alt="">
+                    <p class="project-name">meu-portifolio</p>
+                </div>
+                <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="footer-box">
+                    <img src="./assets/star.svg" alt="">
+                    <p class="stars">100</p>
+                    <img src="./assets/git-branch.svg" alt="">
+                    <p class="branchs">100</p>
+                    <div>
+                        <p class="program-language">Javascript</p>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="projeto"></div>
+            <div class="projeto"></div>
+            <div class="projeto"></div>
+           </div>
         </main>
     </div>
+    <script src="APIgithub.js"></script>
 </body>
 </html>
