Implementando API no meu-portifolio

--- a/index.html
+++ b/index.html
@@ -79,31 +79,13 @@
                 </ul>
 
         </aside>
-        <main>
+        <main class=".main">
             <div class="divmain myprojects">
                 <p>Meus Projetos</p>
             </div>
            <div class="projetos-container">
-            <div class="projeto">
-                <div class="header-box">
-                    <img src="./assets/folder.svg" alt="">
-                    <p class="project-name">meu-portifolio</p>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <div class="footer-box">
-                    <img src="./assets/star.svg" alt="">
-                    <p class="stars">100</p>
-                    <img src="./assets/git-branch.svg" alt="">
-                    <p class="branchs">100</p>
-                    <div>
-                        <p class="program-language">Javascript</p>
-                    </div>
-                    
-                </div>
+
             </div>
-            <div class="projeto"></div>
-            <div class="projeto"></div>
-            <div class="projeto"></div>
            </div>
         </main>
     </div>
