--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site FAZAG</title>
     <link rel="stylesheet" href="aside.css">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;500;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <div class="container">
         <aside>
             <div class="divaside persona">
-                <img class="persona-photo" src="./assets/Foto.png" alt="">
+                <img class="profileImage" src="./assets/Foto.png" alt="">
                 <p class="name">Vitor Henrique</p>
                 <p class="work">Front-End Developer</p>
             </div>
